[gd_scene load_steps=13 format=4]

[ext_resource type="Script" path="res://objects/icicle/icicle_breakable.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bbmf88bb8sjw" path="res://engine/objects/effects/smoke/smoke.tscn" id="2"]
[ext_resource type="Shader" path="res://engine/shaders/highlight.gdshader" id="3"]
[ext_resource type="Texture2D" uid="uid://bcvcs74t4v11" path="res://objects/icicle/icicle_breakable.png" id="4"]
[ext_resource type="Script" path="res://engine/scripts/nodes/enemies/enemy_attacked.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://oe7i3cief0g" path="res://engine/objects/enemies/_dead/enemy_killed.tscn" id="6"]
[ext_resource type="Script" path="res://engine/objects/enemies/_dead/prefabs/do_killed.gd" id="7"]
[ext_resource type="Script" path="res://engine/scripts/resources/instance_node2d/instance_node2d.gd" id="8"]
[ext_resource type="AudioStream" uid="uid://be3uvqev2c1p6" path="res://engine/objects/players/prefabs/sounds/kick.wav" id="9"]
[ext_resource type="AudioStream" uid="uid://c162tqddc8eej" path="res://engine/objects/bumping_blocks/_sounds/bump.wav" id="10"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h3ptm"]
shader = ExtResource("3")
shader_parameter/highlight_color = Color(1, 1, 1, 1)
shader_parameter/frequency = 0.35
shader_parameter/highlight_speed = 6.0
shader_parameter/highlight_width = 15.0

[sub_resource type="Resource" id="Resource_6dehk"]
script = ExtResource("8")
creation_nodepack = ExtResource("6")
trans_offset = Vector2(0, 0)
trans_inheritances = 6
trans_rotation = 0.0
trans_scale = Vector2(1, 1)
trans_skew = 0.0
visi_z_index = 0
visi_z_as_relative = true
visi_y_sort_enabled = false
custom_vars = {
"death": NodePath("../../Sprite2D"),
"death_speed": Vector2(0, -150)
}
custom_script = ExtResource("7")

[node name="IcicleBreakable" type="Node2D"]
z_index = -10
rotation = -3.141590118408203
script = ExtResource("1")
explosion_effect = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_h3ptm")
position = Vector2(-0.0002843220136128366, -64)
texture = ExtResource("4")
offset = Vector2(0, 32)

[node name="Body" type="Area2D" parent="."]
visible = false
position = Vector2(0.53125, 32)
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Body"]
position = Vector2(0, -1)
polygon = PackedVector2Array(-16.53129959106445, -31, -16.53129959106445, -15, -0.53125, 33, 15.46879959106445, -15, 15.46879959106445, -31)

[node name="EnemyAttacked" type="Node" parent="Body"]
script = ExtResource("5")
stomping_standard = Vector2(0, 0)
killing_immune = {
"beetroot": true,
"boomerang": false,
"fireball": true,
"hammer": false,
"iceball": true,
"shell": true,
"shell_defence": 99
}
killing_creation = SubResource("Resource_6dehk")
killing_scores = 300
killing_sound_succeeded = ExtResource("9")
killing_sound_failed = ExtResource("10")

[node name="LeftExplosion" type="Marker2D" parent="."]
visible = false
position = Vector2(-0.0001878740004030988, -32)

[node name="RightExplosion" type="Marker2D" parent="."]
visible = false
position = Vector2(-0.0001878740004030988, -4.577639992930926e-05)

[connection signal="killed_succeeded" from="Body/EnemyAttacked" to="." method="queue_free"]
